# rules_xcode_reduction

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE.bazel  main.cc  main.cpp  wrapper.sh
lib/: BUILD.bazel  lib.cpp
lib/a/: BUILD.bazel  main.mm
lib/b/: BUILD.bazel
lib/c/: BUILD.bazel
lib/d/: BUILD.bazel
