load(
    "@com_github_buildbuddy_io_rules_xcodeproj//xcodeproj:xcodeproj.bzl",
    "xcodeproj",
)

cc_test(
    name = "test",
    srcs = ["main.cpp"],
    deps = ["@bazel_tools//tools/cpp/runfiles"],
    data = ["data.txt"]
)

xcodeproj(
    name = "xcodeproj",
    build_mode = "bazel",
    project_name = "app",
    tags = ["manual"],
    targets = [":test"],
)
