load(
    "@com_github_buildbuddy_io_rules_xcodeproj//xcodeproj:xcodeproj.bzl",
    "xcodeproj",
)

genrule(
    name = "generate",
    outs = ["generated.h", "generated.cpp"],
    cmd = "echo 'std::string hello();' >>generated.h && echo 'std::string hello() { return \"Hello, world!\"; }' >>generated.cpp",
)

cc_binary(
    name = "bin",
    srcs = [
        "main.cpp",
        "generated.h",
        "generated.cpp",
    ],
)

xcodeproj(
    name = "xcodeproj",
    build_mode = "bazel",
    project_name = "app",
    tags = ["manual"],
    top_level_targets = [":bin"],
)
