load(
    "@com_github_buildbuddy_io_rules_xcodeproj//xcodeproj:defs.bzl",
    "xcodeproj",
)

cc_binary(
    name = "bin",
    srcs = [
        "main.cpp",
    ],
)

xcodeproj(
    name = "xcodeproj",
    build_mode = "bazel",
    project_name = "app",
    tags = ["manual"],
    top_level_targets = [":bin"],
)
